--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NGB's Sample Point Demo</title>
+    <script type="module" crossorigin src="/assets/index.c78ef9ef.js"></script>
+    <link rel="stylesheet" href="/assets/index.ae6d7af0.css">
   </head>
   <body>
     <canvas id="bg"></canvas>   
@@ -13,6 +15,6 @@
       <h1 id="cords">Coordinates:</h1>
     </main>
     
-    <script type="module" src="/main.js"></script>
+    
   </body>
 </html>
